fixed header alignment

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -2,7 +2,7 @@
 
 header {
   margin: 0 2rem;
-  padding: 14px 10px;
+  padding: 14px 16px 14px 0;
   height: 18vh;
   user-select: none;
   @include grid-2-cols;
